# stewartPlatformControl

./: CMakeLists.txt
src/Arduino Uno/: stewartplatform.cpp  stewartplatform.h
src/Raspberry Pi/: angularcontroller.cpp  angularcontroller.h  main.cpp  picaminterface.cpp  picaminterface.h
